--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Front End Designer / <a href="https://arjit1704.github.io/FitCure/#">FitCure</a></b></h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>March 2021 - April 2021</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+          <p>I've been practising frontend development on different projects. This is onw of them. </p><br>
         </div>
       </div>
 
